# not-a-dns

./: .dockerignore  .env.template  .gitignore  Dockerfile  Makefile  package-lock.json  package.json  tsconfig.build.json
client/: package-lock.json  package.json  tsconfig.json
client/src/: App.css  App.tsx  index.css  index.tsx
client/src/config/: index.ts
lets-go/: Makefile  go.mod  go.sum  main
lets-go/config/: config.yaml
lets-go/src/: main.go  main_test.go
lets-rust-it/: Cargo.toml  Makefile  build.rs
lets-rust-it/config/: config.yaml
lets-rust-it/src/: main.rs
lets-rust-it/src/lib/dns/: dns.rs  format.rs  mod.rs
lets-rust-it/src/lib/map/: hash.rs  history.rs  iter.rs  list.rs  macros.rs  map.rs  mod.rs
lets-rust-it/src/lib/queue/: hrrn.rs  mod.rs
lets-svelte-it/: .prettierrc  package-lock.json  package.json  svelte.config.js  tsconfig.json
lets-svelte-it/src/: app.d.ts  app.html  hooks.ts
lets-vue-it/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json
lets-vue-it/src/: App.vue  main.ts
proto/: basic_service.proto  cache_service.proto  dns_service.proto  main_service.proto
src/: app.controller.ts  app.interceptor.ts  app.module.ts  main.ts
src/alias/: alias.controller.ts  alias.module.ts  alias.service.ts
src/common/: common.entity.ts  common.service.ts
src/config/: config.module.ts  cors.ts  db.config.ts  index.ts
src/db/: db.module.ts  typeorm.config.ts
src/links/: links.controller.ts  links.module.ts  links.service.ts
src/setting/: setting.controller.ts  setting.module.ts  setting.service.ts
(+195 files in other folders)
