[package]
name = "lets-rust-it"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lets-rust-it"
path = "src/main.rs"

[dependencies]
yaml-rust = "0.4.5"
tonic = "0.6"
prost = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rand = { version = "0.8.5", features = ["small_rng"] }

[build-dependencies]
tonic-build = "0.6"
